--- a/css/styles.css
+++ b/css/styles.css
@@ -689,6 +689,9 @@ body {
   resize: none;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+.form-textarea:focus {
+  color: #4d5ae5;
+}
 .modal-input {
   position: relative;
 }
@@ -740,7 +743,7 @@ input:focus {
   display: block;
   min-width: 169px;
   height: 56px;
-  font-family: "Roboto";
+  font-family: "Roboto", sans-serif;
   font-size: 16px;
   font-weight: 500;
   line-height: 1.5;
