--- a/css/styles.css
+++ b/css/styles.css
@@ -705,8 +705,9 @@ body {
   outline: transparent;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-input:focus {
-  border-color: #4d5ae5;
+.input-name:focus,
++ .input-svg {
+  fill: #4d5ae5;
 }
 .input-svg {
   position: absolute;
