--- a/css/styles.css
+++ b/css/styles.css
@@ -690,7 +690,7 @@ body {
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .form-textarea:focus {
-  color: #4d5ae5;
+  border-color: #4d5ae5;
 }
 .modal-input {
   position: relative;
