--- a/css/styles.css
+++ b/css/styles.css
@@ -164,6 +164,7 @@ body {
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+  margin: 0 auto;
 }
 
 .herocontainer {
