--- a/css/styles.css
+++ b/css/styles.css
@@ -745,6 +745,7 @@ body {
   align-items: center;
   justify-content: center;
   fill: transparent;
+  margin-right: 8px;
 }
 .link-chek {
   color: #4d5ae5;
