--- a/css/styles.css
+++ b/css/styles.css
@@ -128,6 +128,9 @@ body {
 }
 .header-link-m:hover {
   color: #404bbf;
+  padding-bottom: 20px;
+  border-bottom: 4px solid #404bbf;
+  text-transform: capitalize;
 }
 .header-link-m:focus {
   color: #404bbf;
@@ -156,6 +159,9 @@ body {
 }
 .header-link:hover {
   color: #404bbf;
+  padding-bottom: 20px;
+  border-bottom: 4px solid #404bbf;
+  text-transform: capitalize;
 }
 .header-link:focus {
   color: #404bbf;
