--- a/css/styles.css
+++ b/css/styles.css
@@ -118,8 +118,12 @@ body {
 
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.header-link:hover::after {
+.in-activ {
+  color: #404bbf;
+}
+.in-activ::after {
   content: "";
+  color: #404bbf;
   position: absolute;
   left: 0;
   bottom: -1px;
