--- a/css/styles.css
+++ b/css/styles.css
@@ -284,7 +284,7 @@ body {
 .wedo-item {
   flex-basis: calc((100% - 48px) / 3);
 }
-
+/* Team */
 .team {
   background: #f4f4fd;
   padding-top: 120px;
